--- a/halberd.cabal
+++ b/halberd.cabal
@@ -11,8 +11,8 @@ cabal-version:       >=1.8
 executable halberd
   build-depends:       base >= 4.5 && < 4.7
                      , containers
-                     , haskell-packages
-                     , haskell-names
+                     , haskell-packages == 0.2
+                     , haskell-names == 0.1
                      , haskell-src-exts >= 1.14
                      , Cabal >= 1.17
                      , filepath
