--- a/halberd.cabal
+++ b/halberd.cabal
@@ -11,10 +11,10 @@ cabal-version:       >=1.8
 executable halberd
   build-depends:       base >= 4.5 && < 4.7
                      , containers
-                     , haskell-packages == 0.2
-                     , haskell-names == 0.1
-                     , haskell-src-exts >= 1.14
-                     , Cabal >= 1.17
+                     , haskell-packages == 0.2.*
+                     , haskell-names == 0.1.*
+                     , haskell-src-exts == 1.14.*
+                     , Cabal >= 1.17 && < 1.19
                      , filepath
                      , pretty-show
                      , tagged
