--- a/halberd.cabal
+++ b/halberd.cabal
@@ -18,6 +18,7 @@ executable halberd
                      , filepath
                      , pretty-show
                      , tagged
+                     , safe
                      , syb
   hs-source-dirs:      src
   main-is:             Halberd.hs
