--- a/halberd.cabal
+++ b/halberd.cabal
@@ -9,18 +9,17 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable halberd
-  build-depends:       base >= 4.5 && < 4.7
-                     , containers
+  build-depends:       base             >= 4.5    &&  < 4.7
+                     , containers       >= 0.4    &&  < 0.6
                      , haskell-packages == 0.2.*
-                     , haskell-names == 0.1.*
+                     , haskell-names    == 0.1.*
                      , haskell-src-exts == 1.14.*
-                     , Cabal >= 1.17 && < 1.19
-                     , filepath
-                     , mtl
-                     , pretty-show
-                     , tagged
-                     , safe
-                     , syb
+                     , Cabal            >= 1.17   &&  < 1.19
+                     , filepath         == 1.3.*
+                     , mtl              >= 2.0    &&  < 2.2
+                     , tagged           >= 0.4    &&  < 0.8
+                     , safe             == 0.3.*
+                     , syb              >= 0.3    &&  < 0.5
   hs-source-dirs:      src
   main-is:             Halberd.hs
   ghc-options:         -Wall
