Move IO related functions to separate module.

--- a/halberd.cabal
+++ b/halberd.cabal
@@ -39,6 +39,7 @@ executable halberd
                      , Halberd.CollectNames
                      , Halberd.LookupTable
                      , Halberd.Types
+                     , Halberd.UI
                      , Language.Haskell.Exts.Utils
 
 Source-Repository head
