Move suggestion related code to separate module.

--- a/halberd.cabal
+++ b/halberd.cabal
@@ -38,6 +38,7 @@ executable halberd
                      , Halberd.ChosenImports
                      , Halberd.CollectNames
                      , Halberd.LookupTable
+                     , Halberd.Suggestions
                      , Halberd.Types
                      , Halberd.UI
                      , Language.Haskell.Exts.Utils
