--- a/halberd.cabal
+++ b/halberd.cabal
@@ -19,29 +19,40 @@ description:         This tool uses the Haskell Suite [0] to determine
 homepage:            http://github.com/haskell-suite/halberd/
 extra-source-files:  CHANGELOG, README.md
 
-executable halberd
+library
   build-depends:       base             >= 4.5    &&  < 4.7
                      , containers       >= 0.4    &&  < 0.6
                      , haskell-packages == 0.2.*
                      , haskell-names    == 0.2.*
                      , haskell-src-exts == 1.14.*
                      , Cabal            >= 1.17   &&  < 1.19
-                     , filepath         == 1.3.*
                      , mtl              >= 2.0    &&  < 2.2
-                     , tagged           >= 0.4    &&  < 0.8
                      , safe             == 0.3.*
                      , syb              >= 0.3    &&  < 0.5
   hs-source-dirs:      src
-  main-is:             Halberd.hs
   ghc-options:         -Wall
-  other-modules:       Data.Tuple.Utils
-                     , Halberd.ChosenImports
+  exposed-modules:     Halberd.ChosenImports
                      , Halberd.CollectNames
                      , Halberd.LookupTable
                      , Halberd.Suggestions
                      , Halberd.Types
-                     , Halberd.UI
+  other-modules:       Data.Tuple.Utils
                      , Language.Haskell.Exts.Utils
+
+executable halberd
+  build-depends:       base             >= 4.5    &&  < 4.7
+                     , Cabal            >= 1.17   &&  < 1.19
+                     , halberd          == 0.1.1
+                     , haskell-names    == 0.2.*
+                     , haskell-packages == 0.2.*
+                     , haskell-src-exts == 1.14.*
+                     , mtl              >= 2.0    &&  < 2.2
+                     , safe             == 0.3.*
+                     , tagged           >= 0.4    &&  < 0.8
+  hs-source-dirs:      exe
+  main-is:             Halberd.hs
+  ghc-options:         -Wall
+  other-modules:       Halberd.UI
 
 Source-Repository head
   Type:                git
