--- a/halberd.cabal
+++ b/halberd.cabal
@@ -54,6 +54,25 @@ executable halberd
   ghc-options:         -Wall
   other-modules:       Halberd.UI
 
+Test-suite halberd-tests
+  build-depends:       base                 >= 4.5    && < 4.7
+                     , Cabal                >= 1.17   && < 1.19
+                     , containers           >= 0.4    && < 0.6
+                     , halberd              == 0.1.1
+                     , HUnit                == 1.2.*
+                     , test-framework       == 0.8.*
+                     , test-framework-hunit == 0.3.*
+                     , haskell-names        == 0.2.*
+                     , haskell-packages     == 0.2.*
+                     , haskell-src-exts     == 1.14.*
+                     , tagged               >= 0.4    && < 0.8
+                     , split                == 0.2.*
+                     , mtl                  >= 2.0    && < 2.2
+  hs-source-dirs:      tests
+  main-is:             Runner.hs
+  type:                exitcode-stdio-1.0
+  ghc-options:         -Wall
+
 Source-Repository head
   Type:                git
   Location:            git://github.com/haskell-suite/halberd.git
