Halberd: allow haskell-src-exts 1.15.

--- a/halberd.cabal
+++ b/halberd.cabal
@@ -1,5 +1,5 @@
 name:                halberd
-version:             0.1.2.4
+version:             0.1.2.5
 license:             BSD3
 license-file:        LICENSE
 author:              Erik Hesselink, Simon Meier, Tom Lokhorst, Roman Cheplyaka
@@ -23,8 +23,8 @@ library
   build-depends:       base             >= 4.5    &&  < 4.8
                      , containers       >= 0.4    &&  < 0.6
                      , haskell-packages == 0.2.*
-                     , haskell-names    >= 0.2    && < 0.4
-                     , haskell-src-exts == 1.14.*
+                     , haskell-names    >= 0.2    &&  < 0.4
+                     , haskell-src-exts >= 1.14   &&  < 1.16
                      , Cabal            >= 1.16   &&  < 1.19
                      , mtl              >= 2.0    &&  < 2.2
                      , safe             == 0.3.*
@@ -43,9 +43,9 @@ executable halberd
   build-depends:       base             >= 4.5    &&  < 4.8
                      , Cabal            >= 1.16   &&  < 1.19
                      , halberd
-                     , haskell-names    >= 0.2    && < 0.4
+                     , haskell-names    >= 0.2    &&  < 0.4
                      , haskell-packages == 0.2.*
-                     , haskell-src-exts == 1.14.*
+                     , haskell-src-exts >= 1.14   &&  < 1.16
                      , mtl              >= 2.0    &&  < 2.2
                      , safe             == 0.3.*
                      , tagged           >= 0.4    &&  < 0.8
@@ -64,7 +64,7 @@ Test-suite halberd-tests
                      , test-framework-hunit == 0.3.*
                      , haskell-names        >= 0.2    && < 0.4
                      , haskell-packages     == 0.2.*
-                     , haskell-src-exts     == 1.14.*
+                     , haskell-src-exts     >= 1.14   && < 1.16
                      , tagged               >= 0.4    && < 0.8
                      , split                == 0.2.*
                      , mtl                  >= 2.0    && < 2.2
